--- a/NEWshoot/Assembly-CSharp.csproj
+++ b/NEWshoot/Assembly-CSharp.csproj
@@ -9,10 +9,10 @@
     <ProductVersion>10.0.20506</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <RootNamespace></RootNamespace>
-    <ProjectGuid>{D4384D79-49E5-F18E-9F66-3675FC59817C}</ProjectGuid>
+    <ProjectGuid>{71F49057-C3F1-D9B2-9CBC-7AAC46072819}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <AssemblyName>Assembly-CSharp-Editor-firstpass</AssemblyName>
+    <AssemblyName>Assembly-CSharp</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <BaseDirectory>Assets</BaseDirectory>
@@ -51,7 +51,14 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\Standard Assets\Editor\CrossPlatformInput\CrossPlatformInputInitialize.cs" />
+     <Compile Include="Assets\AstarPathfindingProject\ExampleScenes\ExampleScripts\ShootSoundCtr2.cs" />
+     <Compile Include="Assets\Scripts\BornFirePoint.cs" />
+     <Compile Include="Assets\Scripts\MoveScript_Rigibody.cs" />
+     <Compile Include="Assets\Scripts\MoveScripts_CC.cs" />
+     <Compile Include="Assets\Scripts\ParticalType.cs" />
+     <Compile Include="Assets\Scripts\RotateMouse.cs" />
+     <Compile Include="Assets\Scripts\Shoot.cs" />
+     <Compile Include="Assets\Scripts\test.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>D:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
