--- a/NEWshoot/Assembly-CSharp.csproj
+++ b/NEWshoot/Assembly-CSharp.csproj
@@ -52,17 +52,22 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\AstarPathfindingProject\ExampleScenes\ExampleScripts\ShootSoundCtr2.cs" />
+     <Compile Include="Assets\Scripts\BornBehavior.cs" />
      <Compile Include="Assets\Scripts\BornFirePoint.cs" />
+     <Compile Include="Assets\Scripts\BornTrigger.cs" />
      <Compile Include="Assets\Scripts\Enemy_Stay.cs" />
+     <Compile Include="Assets\Scripts\Enemy_Way_Point.cs" />
      <Compile Include="Assets\Scripts\EnemyLife.cs" />
      <Compile Include="Assets\Scripts\FireSndControl.cs" />
      <Compile Include="Assets\Scripts\HitArea.cs" />
+     <Compile Include="Assets\Scripts\MainLife.cs" />
      <Compile Include="Assets\Scripts\MoveScript_Rigibody.cs" />
      <Compile Include="Assets\Scripts\MoveScripts_CC.cs" />
      <Compile Include="Assets\Scripts\ParticalType.cs" />
      <Compile Include="Assets\Scripts\RotateMouse.cs" />
      <Compile Include="Assets\Scripts\Shoot.cs" />
      <Compile Include="Assets\Scripts\test.cs" />
+     <Compile Include="Assets\Scripts\WayPoint_Behavior.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>D:/yhl/unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
